--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb_AdJHOeXCHjmrXdD612jtyQpXqlbOs&libraries=places"></script>
     <title>GeoInfo.cc</title>
   </head>
   <body>
